[package]
name = "multi-port"
version = "0.1.0"
edition = "2021"

[lib]
name = "multi_port"
crate-type = ["rlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fateful_peripheral = { git = "https://github.com/commonkestrel/fateful_peripheral" }
anyhow = "1.0"
